200525 added recommend template, but not completed(some layout problems left to solve)

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -2,6 +2,10 @@ body {
     font-family: 'Stylish', sans-serif;
 }
 
+ul {
+    list-style: none;
+}
+
 a:hover {
     text-decoration: none;
 }
@@ -53,6 +57,22 @@ a:hover {
 
 .w3-circle {
     border-radius: 50%;
+}
+
+.heart {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background: url(heart.png) no-repeat;
+  cursor: pointer;
+}
+
+.heart-blast {
+  background-position: -2800px 0;
+  transition: background 1s steps(28);
 }
 
 svg {
